# rmpg-flex

./: .gitignore  .mcp.json  CHANGELOG 2.json  CHANGELOG.json  CLAUDE.md  LEGACY.md  LICENSE  PLAN.md  README.md  RMPG Flare.sln  RMPG Flare.vcxproj  RMPG Flare.vcxproj.filters  TRIAGE.md  artillery.yml  package 2.json  package-lock.json  package.json  plan.md  playwright.config.ts  tsconfig.json  vitest.config.ts  wrangler 2.toml  wrangler.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml
.husky/: pre-push
client/: .env.example  capacitor.config.ts  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts  vitest.config.ts
deploy/: deploy-all.sh  deploy-downloads-r2.sh  deploy-local.sh  deploy.sh  rmpg-webhook.service  setup-vps.sh  upload-to-vps.sh  vps-deploy.sh  webhook-listener.js
desktop/: connectivityMonitor.js  internalGps.js  localDb.js  main.js  offlineRouter.js  originalCatalog.json  package-lock.json  package.json  pinManager.js  preload.js  syncManager.js  updater.js
docs/: cloudflare-migration-decisions-2026-05-24.md  evidence-handling-sop.md  incident-2026-05-24-dual-worker.md  migration-onprem-cloudflare.md  post-merge-remediation.md  restore-to-20260513.patch  transcript-2026-05-12-13.md
e2e/: accessibility.spec.ts  health.spec.ts
edge/: .gitignore  README.md  pyproject.toml
edge/flex_edge/: __init__.py  cli.py  client.py  signer.py  simulator.py
edge/tests/: test_client.py  test_signer.py
functions/: _middleware.ts
legacy/: README.md
src/: index.ts  (+2 more)
(+2237 files in other folders)
